subnet.tf
resource "aws_subnet" "public_subnets" {
    count = length(var.public_subnet_cidr_blocks)
    vpc_id = aws_vpc.aws-vpc.id
    cidr_block = element("${var.public_subnet_cidr_blocks}", count.index)
    availability_zone = element(var.availability_zones, count.index)
    
    tags = {
        Name = "Public Subnet ${count.index + 1}"
    }
}
 
resource "aws_subnet" "private_subnets" {
    count = length(var.private_subnet_cidr_blocks)
    vpc_id = aws_vpc.aws-vpc.id
    cidr_block = element(var.private_subnet_cidr_blocks, count.index)
    availability_zone = element(var.availability_zones, count.index)
    
    tags = {
        Name = "Private Subnet ${count.index + 1}"
    }
}
